--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Grayhateth Services</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -241,7 +241,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -297,7 +297,7 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
@@ -974,7 +974,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
@@ -1042,7 +1042,7 @@
             <!-- links -->
             <div class="footer-blocks__links anim-uni-in-up">
               <p class="t-xsmall t-muted">
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Grayhateth</a>
                 <i class="ph-bold ph-copyright"></i>
                 2025
               </p>
