--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Grayhateth Team</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -29,8 +29,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Rayo - Digital Agency & Personal Portfolio HTML Template">
-    <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta property="og:title" content="Gray - Digital Agency & Personal Portfolio HTML Template">
+    <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML Gray designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo Gray helps showcase projects, services and expertise with clarity and impact.">
     <meta property="og:url" content="https://mixdesign.dev/themeforest/rayo">
     <meta property="og:image" content="img/og-image.html">
     <!-- Facebook Metadata End -->
@@ -223,8 +223,8 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
-                    designer and illustrator based in Odesa, Ukraine</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Gray, digital 
+                    designer and illustrator</p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -297,14 +297,14 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up" href="contact.html">
-          <span class="btn-caption">Say Hello</span>
+          <span class="btn-caption">Reach Out</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
@@ -824,7 +824,7 @@
                                 </div>
                               </div>
                               <div class="mxd-testimonials-image__text" data-swiper-parallax-x="-100" data-swiper-parallax-opacity="0">
-                                <p class="t-large t-opposite">Working with Rayo team was an absolute pleasure! They took the time to understand our business 
+                                <p class="t-large t-opposite">Working with Gray team was an absolute pleasure! They took the time to understand our business 
                                   needs and translated them into a beautifully designed, user-friendly website.</p>
                                 <a class="btn btn-anim btn-default btn-small btn-base slide-right-up" href="#0">
                                   <span class="btn-caption">Project Page</span>
