--- a/works-simple.html
+++ b/works-simple.html
@@ -2,16 +2,14 @@
 <html lang="en" dir="ltr">
 
   
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/works-simple.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:31:21 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Gray - Digital Agency & Personal Portfolio</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta name="description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
     <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
     <meta name="author" content="mix_design">
 
@@ -29,8 +27,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Rayo - Digital Agency & Personal Portfolio HTML Template">
-    <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta property="og:title" content="Gray - Digital Agency & Personal Portfolio HTML Template">
+    <meta property="og:description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
     <meta property="og:url" content="https://mixdesign.dev/themeforest/rayo">
     <meta property="og:image" content="img/og-image.html">
     <!-- Facebook Metadata End -->
@@ -223,8 +221,8 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
-                    designer and illustrator based in Odesa, Ukraine</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Gray, digital 
+                    designer and illustrator based</p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -241,7 +239,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -297,7 +295,7 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
@@ -691,7 +689,7 @@
                           <div class="mxd-projects-list__icon">
                             <i class="ph ph-arrow-right"></i>
                           </div>
-                          <p>Rayo studio portfolio</p>
+                          <p>Grayhateth studio portfolio</p>
                         </div>
                         <div class="mxd-projects-list__image anim-uni-in-up">
                           <img src="img/works/preview/1200x800_prv-06.webp" alt="Project Preview">
@@ -828,7 +826,7 @@
                               </div>
                             </div>
                             <div class="mxd-testimonials-photo__text" data-swiper-parallax-x="-300" data-swiper-parallax-opacity="0">
-                              <p class="t-large">Working with Rayo team was an absolute pleasure! They took the time to understand our business 
+                              <p class="t-large">Working with Gray team was an absolute pleasure! They took the time to understand our business 
                                 needs and translated them into a beautifully designed, user-friendly website.</p>
                               <a class="btn btn-anim btn-default btn-small btn-opposite slide-right-up" href="#0">
                                 <span class="btn-caption">Project Page</span>
@@ -1083,7 +1081,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
@@ -1151,7 +1149,7 @@
             <!-- links -->
             <div class="footer-blocks__links anim-uni-in-up">
               <p class="t-xsmall t-muted">
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://grayhateth.vercel.app" target="_blank">Grayhateth</a>
                 <i class="ph-bold ph-copyright"></i>
                 2025
               </p>
@@ -1178,5 +1176,5 @@
   </body>
 
 
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/works-simple.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:32:13 GMT -->
+
 </html>
